src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__error_missing_type_annotation.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
PARSE ERROR: [Diagnostic { kind: Error, code: Some("E0100"), message: "expected `:`, found `)`", span: Span { start: 6, end: 7, start_line: 1, start_col: 7 }, labels: [], suggestions: [], source_file: None, source_content: None }]
