src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__error_multiple_visibility.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
PARSE ERROR: [Diagnostic { kind: Error, code: Some("E0100"), message: "expected `fn`, `struct`, `enum`, `trait`, `impl`, `effect`, `handler`, `type`, `const`, `static`, `bridge`, `extern`, `mod`, or `macro`, found keyword `pub`", span: Span { start: 4, end: 7, start_line: 1, start_col: 5 }, labels: [], suggestions: [], source_file: None, source_content: None }]
