src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__error_stray_closing_brace.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
PARSE ERROR: [Diagnostic { kind: Error, code: Some("E0100"), message: "expected `fn`, `struct`, `enum`, `trait`, `impl`, `effect`, `handler`, `type`, `const`, `static`, `bridge`, `extern`, `mod`, or `macro`, found `}`", span: Span { start: 22, end: 23, start_line: 1, start_col: 23 }, labels: [], suggestions: [], source_file: None, source_content: None }]
