src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__extern_variadic.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Bridge(
            BridgeDecl {
                attrs: [],
                language: Spanned {
                    node: "C",
                    span: Span {
                        start: 8,
                        end: 11,
                        start_line: 2,
                        start_col: 8,
                    },
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 1,
                        end: 7,
                        start_line: 2,
                        start_col: 1,
                    },
                },
                items: [
                    Function(
                        BridgeFn {
                            attrs: [],
                            name: Spanned {
                                node: SymbolU32 {
                                    value: 2,
                                },
                                span: Span {
                                    start: 21,
                                    end: 27,
                                    start_line: 3,
                                    start_col: 8,
                                },
                            },
                            params: [
                                BridgeParam {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 3,
                                        },
                                        span: Span {
                                            start: 28,
                                            end: 31,
                                            start_line: 3,
                                            start_col: 15,
                                        },
                                    },
                                    ty: Type {
                                        kind: Pointer {
                                            mutable: false,
                                            inner: Type {
                                                kind: Path(
                                                    TypePath {
                                                        segments: [
                                                            TypePathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 4,
                                                                    },
                                                                    span: Span {
                                                                        start: 40,
                                                                        end: 42,
                                                                        start_line: 3,
                                                                        start_col: 27,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 40,
                                                            end: 42,
                                                            start_line: 3,
                                                            start_col: 27,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 40,
                                                    end: 42,
                                                    start_line: 3,
                                                    start_col: 27,
                                                },
                                            },
                                        },
                                        span: Span {
                                            start: 33,
                                            end: 42,
                                            start_line: 3,
                                            start_col: 20,
                                        },
                                    },
                                    ownership: None,
                                    span: Span {
                                        start: 28,
                                        end: 42,
                                        start_line: 3,
                                        start_col: 15,
                                    },
                                },
                            ],
                            is_variadic: true,
                            return_type: Some(
                                Type {
                                    kind: Path(
                                        TypePath {
                                            segments: [
                                                TypePathSegment {
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 5,
                                                        },
                                                        span: Span {
                                                            start: 52,
                                                            end: 55,
                                                            start_line: 3,
                                                            start_col: 39,
                                                        },
                                                    },
                                                    args: None,
                                                },
                                            ],
                                            span: Span {
                                                start: 52,
                                                end: 55,
                                                start_line: 3,
                                                start_col: 39,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 52,
                                        end: 55,
                                        start_line: 3,
                                        start_col: 39,
                                    },
                                },
                            ),
                            span: Span {
                                start: 18,
                                end: 56,
                                start_line: 3,
                                start_col: 5,
                            },
                        },
                    ),
                ],
                span: Span {
                    start: 1,
                    end: 58,
                    start_line: 2,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 1,
        end: 58,
        start_line: 2,
        start_col: 1,
    },
}
