src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__fiber_function.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_fiber: true,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 9,
                        end: 19,
                        start_line: 1,
                        start_col: 10,
                    },
                },
                type_params: None,
                params: [
                    Param {
                        qualifier: None,
                        pattern: Pattern {
                            kind: Ident {
                                by_ref: false,
                                mutable: false,
                                name: Spanned {
                                    node: SymbolU32 {
                                        value: 2,
                                    },
                                    span: Span {
                                        start: 20,
                                        end: 23,
                                        start_line: 1,
                                        start_col: 21,
                                    },
                                },
                                subpattern: None,
                            },
                            span: Span {
                                start: 20,
                                end: 23,
                                start_line: 1,
                                start_col: 21,
                            },
                        },
                        ty: Type {
                            kind: Path(
                                TypePath {
                                    segments: [
                                        TypePathSegment {
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 3,
                                                },
                                                span: Span {
                                                    start: 25,
                                                    end: 31,
                                                    start_line: 1,
                                                    start_col: 26,
                                                },
                                            },
                                            args: None,
                                        },
                                    ],
                                    span: Span {
                                        start: 25,
                                        end: 31,
                                        start_line: 1,
                                        start_col: 26,
                                    },
                                },
                            ),
                            span: Span {
                                start: 25,
                                end: 31,
                                start_line: 1,
                                start_col: 26,
                            },
                        },
                        span: Span {
                            start: 20,
                            end: 31,
                            start_line: 1,
                            start_col: 21,
                        },
                    },
                ],
                return_type: Some(
                    Type {
                        kind: Path(
                            TypePath {
                                segments: [
                                    TypePathSegment {
                                        name: Spanned {
                                            node: SymbolU32 {
                                                value: 4,
                                            },
                                            span: Span {
                                                start: 36,
                                                end: 40,
                                                start_line: 1,
                                                start_col: 37,
                                            },
                                        },
                                        args: None,
                                    },
                                ],
                                span: Span {
                                    start: 36,
                                    end: 40,
                                    start_line: 1,
                                    start_col: 37,
                                },
                            },
                        ),
                        span: Span {
                            start: 36,
                            end: 40,
                            start_line: 1,
                            start_col: 37,
                        },
                    },
                ),
                effects: Some(
                    EffectRow {
                        kind: Effects {
                            effects: [
                                Type {
                                    kind: Path(
                                        TypePath {
                                            segments: [
                                                TypePathSegment {
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 5,
                                                        },
                                                        span: Span {
                                                            start: 44,
                                                            end: 46,
                                                            start_line: 1,
                                                            start_col: 45,
                                                        },
                                                    },
                                                    args: None,
                                                },
                                            ],
                                            span: Span {
                                                start: 44,
                                                end: 46,
                                                start_line: 1,
                                                start_col: 45,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 44,
                                        end: 46,
                                        start_line: 1,
                                        start_col: 45,
                                    },
                                },
                                Type {
                                    kind: Path(
                                        TypePath {
                                            segments: [
                                                TypePathSegment {
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 6,
                                                        },
                                                        span: Span {
                                                            start: 48,
                                                            end: 53,
                                                            start_line: 1,
                                                            start_col: 49,
                                                        },
                                                    },
                                                    args: None,
                                                },
                                            ],
                                            span: Span {
                                                start: 48,
                                                end: 53,
                                                start_line: 1,
                                                start_col: 49,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 48,
                                        end: 53,
                                        start_line: 1,
                                        start_col: 49,
                                    },
                                },
                            ],
                            rest: None,
                        },
                        span: Span {
                            start: 43,
                            end: 54,
                            start_line: 1,
                            start_col: 44,
                        },
                    },
                ),
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Path(
                                    ExprPath {
                                        segments: [
                                            ExprPathSegment {
                                                name: Spanned {
                                                    node: SymbolU32 {
                                                        value: 7,
                                                    },
                                                    span: Span {
                                                        start: 57,
                                                        end: 61,
                                                        start_line: 1,
                                                        start_col: 58,
                                                    },
                                                },
                                                args: None,
                                            },
                                        ],
                                        span: Span {
                                            start: 57,
                                            end: 61,
                                            start_line: 1,
                                            start_col: 58,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 57,
                                    end: 61,
                                    start_line: 1,
                                    start_col: 58,
                                },
                            },
                        ),
                        span: Span {
                            start: 55,
                            end: 63,
                            start_line: 1,
                            start_col: 56,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 63,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 63,
        start_line: 1,
        start_col: 1,
    },
}
